# influxdb3-rs

./: Cargo.toml
influxdb3-core/: Cargo.toml
influxdb3-core/src/: batch_writer.rs  client.rs  client_builder.rs  error.rs  lib.rs  options.rs  point.rs  point_stream.rs  point_value.rs  tag_name.rs  util.rs
influxdb3-macro/: Cargo.toml
influxdb3-macro/src/: from_point.rs  lib.rs  parser.rs  to_point.rs  util.rs
src/: lib.rs
