[package]
name = "influxdb3-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "influxdb3-core","influxdb3-macro"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "1.4.0"
url = "2.5.7"
reqwest = { version = "0.12.24", features = ["gzip", "json"] }
thiserror = "2.0.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
async-compression = { version = "0.4.35", features = ["tokio", "gzip"] }
tokio = { version = "1.48.0", default-features = false, features = ["io-util"] }
arrow-flight = { version = "57.1.0", features = ["flight-sql"] }
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
tonic = { version = "0.14.2", features = ["transport", "tls-native-roots"] }
futures = "0.3.31"

[dependencies]
influxdb3-core = { path = "influxdb3-core" }
influxdb3-macro = { path = "influxdb3-macro", optional = true }

[dev-dependencies]
futures = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }

[features]
derive = ["influxdb3-macro"]
