[package]
name = "influxdb3-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
arrow-flight = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
async-compression = { workspace = true }
tokio = { workspace = true }